--- a/html/index.css
+++ b/html/index.css
@@ -1,11 +1,32 @@
 body {
-    padding: 0;
+    padding: 20px;
     margin: 0;
+}
+
+.flexrow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    gap: 10px;
+}
+
+.flexcol {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    gap: 10px;
 }
 
 #crt {
     image-rendering: pixelated;
     image-rendering: crisp-edges;
+}
+
+#tape-monitor {
+    display: block;
+    width: 2em;
 }
 
 .centered {
@@ -14,21 +35,13 @@ body {
 }
 
 .fullscreen {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    bottom: 20px;
-    left: 20px;
-    /* background-color: black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
 }
 
-.fullscreen canvas {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    max-width: 100%;
-}
+/* .fullscreen canvas { */
+/*     object-fit: contain; */
+/*     width: 100%; */
+/*     height: 100%; */
+/*     max-height: 100%; */
+/*     max-width: 100%; */
+/* } */
