--- a/html/index.css
+++ b/html/index.css
@@ -1,6 +1,7 @@
 body {
     padding: 20px;
     margin: 0;
+    overflow: hidden;
 }
 
 .flexrow {
@@ -14,14 +15,14 @@ body {
 .flexcol {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: stretch;
     gap: 10px;
 }
 
 #crt {
     image-rendering: pixelated;
-    image-rendering: crisp-edges;
+    image-rendering: crisp-edges;    
 }
 
 #tape-monitor {
@@ -38,10 +39,17 @@ body {
     height: 100vh;
 }
 
-/* .fullscreen canvas { */
-/*     object-fit: contain; */
-/*     width: 100%; */
-/*     height: 100%; */
-/*     max-height: 100%; */
-/*     max-width: 100%; */
-/* } */
+#canvas-container {
+    position: relative;
+    height: calc(100vh - 12em); /* Subtract the height of the header */
+}
+
+#canvas-container canvas {
+    position: absolute;
+    top: 0;
+    object-fit: contain;
+    left: 0;
+    margin-left: auto;
+    right: 0;
+    margin-right: auto;
+}
